--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "license": "ISC",
   "devDependencies": {
     "@biomejs/biome": "1.5.3",
+    "@types/jsdom": "^21.1.6",
     "pino-pretty": "^10.3.1",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "happy-dom": "^13.3.8",
+    "jsdom": "^24.0.0",
     "pino": "^8.18.0",
     "puppeteer": "^22.0.0",
     "puppeteer-extra": "^3.3.6",
