--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "storiee",
   "version": "1.0.0",
-  "description": "",
+  "description": "Storiee server",
   "main": "index.js",
   "type": "module",
   "scripts": {
