--- a/package.json
+++ b/package.json
@@ -5,24 +5,29 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "build": "swc src --out-dir dist",
+    "start": "node dist/index.js",
+    "fmt": "npx @biomejs/biome check --apply ./src",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx src/index.ts"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "AGPL-3.0-or-later",
   "devDependencies": {
     "@biomejs/biome": "1.5.3",
+    "@swc-node/register": "^1.8.0",
     "@types/jsdom": "^21.1.6",
     "pino-pretty": "^10.3.1",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@bogeychan/elysia-polyfills": "^0.6.4",
+    "@sinclair/typebox": "^0.32.14",
+    "elysia": "^0.8.17",
     "jsdom": "^24.0.0",
     "pino": "^8.18.0",
-    "puppeteer": "^22.0.0",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "puppeteer": "^22.0.0"
   }
 }
