feat: what am i doing
For the server I seperated API endpoints.

For the client, fuck frontend.

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -2,7 +2,8 @@
   "name": "storiee-server",
   "version": "1.0.0",
   "description": "Storiee server",
-  "main": "index.js",
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "type": "module",
   "scripts": {
     "build": "swc src --out-dir dist",
