--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -10,6 +10,7 @@
     "fmt": "npx @biomejs/biome format --write ./app"
   },
   "dependencies": {
+    "libs": "*",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
