feat: properly implement frontend
Next.js <3 <3 <3 <3
Tailwind CSS <3 <3 <3 <3
shadcn-ui <3 <3 <3 <3

--- a/turbo.json
+++ b/turbo.json
@@ -11,6 +11,9 @@
     "fmt": {
       "cache": false
     },
+    "start": {
+      "cache": true
+    },
     "dev": {
       "cache": false
     }
