--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@bogeychan/elysia-polyfills": "^0.6.4",
+    "@elysiajs/cors": "^0.8.0",
     "@sinclair/typebox": "^0.32.14",
     "elysia": "^0.8.17",
     "jsdom": "^24.0.0",
