feat(server): switch to playwright
Microsoft > Google confirmed?

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -30,6 +30,6 @@
     "elysia": "^0.8.17",
     "jsdom": "^24.0.0",
     "pino": "^8.18.0",
-    "puppeteer": "^22.0.0"
+    "playwright": "^1.41.2"
   }
 }
