--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "fmt": "npx @biomejs/biome format --write ./app"
+    "fmt": "bunx @biomejs/biome format --write ./app ./components/storiee"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
