--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Storiee
 data/
 debug/
+## tsx
+undefined/
 
 # Created by https://www.toptal.com/developers/gitignore/api/node
 # Edit at https://www.toptal.com/developers/gitignore?templates=node
