--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://turbo.build/schema.json",
+  "globalEnv": ["BROWSER_CHANNEL", "HEADLESS"],
   "tasks": {
     "build": {
       "dependsOn": [
@@ -8,7 +9,8 @@
       "outputs": [
         "dist/**",
         ".next/**"
-      ]
+      ],
+      "env": ["NEXT_PUBLIC_*"]
     },
     "lint": {
       "outputs": []
