--- a/turbo.json
+++ b/turbo.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalEnv": ["BROWSER_CHANNEL", "HEADLESS"],
+  "globalEnv": ["BROWSER_CHANNEL", "HEADLESS", "NEXT_PUBLIC_API_URL", "API_URL"],
   "tasks": {
     "build": {
       "dependsOn": [
@@ -9,8 +9,7 @@
       "outputs": [
         "dist/**",
         ".next/**"
-      ],
-      "env": ["NEXT_PUBLIC_*"]
+      ]
     },
     "lint": {
       "outputs": []
