--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -24,10 +24,10 @@
   },
   "dependencies": {
     "@bogeychan/elysia-polyfills": "^0.6.4",
-    "@elysiajs/cors": "^1.0.5",
+    "@elysiajs/cors": "1.0.2",
     "@sinclair/typebox": "^0.32.34",
     "electron": "^30.2.0",
-    "elysia": "^1.0.27",
+    "elysia": "1.0.20",
     "jsdom": "^24.1.0",
     "pino": "^8.21.0",
     "playwright": "^1.45.1"
