--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@bogeychan/elysia-polyfills": "^0.6.4",
     "@elysiajs/cors": "1.0.2",
-    "@sinclair/typebox": "^0.32.34",
+    "@sinclair/typebox": "0.32.14",
     "electron": "^30.2.0",
     "elysia": "1.0.20",
     "jsdom": "^24.1.0",
