--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -23,7 +23,9 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "@hono/node-server": "^1.12.0",
     "electron": "^30.2.0",
+    "hono": "^4.4.13",
     "jsdom": "^24.1.0",
     "pino": "^8.21.0",
     "playwright": "^1.45.1"
